--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>PerarasuT S</h1>
+            <img src="Image.jpg" alt="Image.jpg" class="profile-picture">
+            <h1>Perarasu T </h1>
             <p>Am Computer Science</p>
         </div>
     </header>
